--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
     implementation("com.squareup.moshi:moshi:1.14.0")
 
+
+    implementation "androidx.compose.material:material:$compose_version"
+
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
 
     implementation "androidx.navigation:navigation-compose:2.4.2"
